--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -1,3 +1,51 @@
+.topmenu{
+    position: relative;
+}
+.menu-prop{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    right: 30px;
+    
+}
+.menu-prop>div{
+    margin-right: 10px;
+}
+.lang:hover>.glyph-small{
+    color:red;
+}
+.lang:hover>.langs{
+    transition: 0.2s;
+    height: 44px;
+    opacity: 1;
+}
+.langs>.lng:hover{
+    text-decoration: underline;
+}
+.lang{
+    cursor: pointer;
+    position: relative;
+}
+.langs{
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+    border: 1px dashed black;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: 0;
+    height: 0;
+    opacity: 0;
+    z-index: 200;
+    
+}
+.langs>.lng{
+    text-align: center;
+    width: 100%;
+}
+
 li .glyphicon {
     margin-right: 10px;
 }
@@ -12,48 +60,133 @@ li.link-active a:focus {
 
 /* Keep the nav menu independent of scrolling and on top of other items */
 .main-nav {
-    position: fixed;
+
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    
 }
-
-@media (min-width: 768px) {
-    /* On small screens, convert the nav menu to a vertical sidebar */
-    .main-nav {
-        height: 100%;
-        width: calc(25% - 20px);
+.nav>ul{
+    margin-top: 5px;
+}
+.nav{
+  display:flex;
+  justify-content:space-around;
+  
+}
+.navbar{
+    border-radius: 0;
+    padding: 5px;
+    min-height: 0;
+}
+@media (max-width: 767px){
+    
+}
+@media (max-width: 940px){
+    
+    
+  .nav {
+    margin-top:20px;
+    flex-direction:column;
+  }
+  .navbar li a {
+    padding: 10px 16px;
+    border-radius: 4px;
+  }
+  .navbar-collapse{
+    padding:0;
+   
+  }
+}
+.nav>li:not(.link-active)>a{
+  color: grey;
+}
+.nav>li>a:hover{
+  color: rgb(0, 0, 0);
+}
+@media (min-width: 941px) {
+  /* On small screens, convert the nav menu to a vertical sidebar */
+    .navbar-header .menu-prop{
+        display: none;
     }
     .navbar {
-        border-radius: 0px;
-        border-width: 0px;
-        height: 100%;
+        border-radius: 0;
+        border:none;
     }
-    .navbar-header {
-        float: none;
+    .topmenu img{
+        margin-left:10%; 
     }
-    .navbar-collapse {
-        border-top: 1px solid #444;
-        padding: 0px;
-    }
-    .navbar ul {
+  
+
+    /* .navbar ul {
         float: none;
     }
     .navbar li {
         float: none;
         font-size: 15px;
         margin: 6px;
-    }
+    } */
     .navbar li a {
-        padding: 10px 16px;
-        border-radius: 4px;
+      padding: 10px 16px;
+      border-radius: 4px;
     }
+
     .navbar a {
-        /* If a menu item's text is too long, truncate it */
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+      /* If a menu item's text is too long, truncate it */
+      /* width: 100%; */
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+}
+
+@media (max-width: 940px) {
+    .menu-prop{
+        left: 20px;
+        top:20px;
+        
+        right: auto;
+        
+        color:rgb(211, 211, 211);
+    }
+    .langs{
+        background-color: rgb(34,34,34);
+        
+    }
+    .topmenu .menu-prop{
+        display: none;
+    }
+    .navbar-header {
+        
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important; 
+    }
+    .navbar-nav>li {
+        float: none;
+    } 
+    .collapse.in{
+        display:block !important;
+    }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
     }
 }
