--- a/CarsCrete/ClientApp/src/styles.css
+++ b/CarsCrete/ClientApp/src/styles.css
@@ -6,5 +6,23 @@
     margin-bottom: 2px;
 }
 body{
-    min-width: 262px;
+    min-width: 330px;
+}
+.background-blur{
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.664);
+    z-index: 50;
+}
+.is-invalid:not(span){
+    border-color: rgb(255, 0, 0)
+}
+
+
+
+span.is-invalid, p.is-invalid{
+    color: red;
 }
