Сделал страницу машин

--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -49,6 +49,11 @@
     z-index: 200;
     
 }
+.fa-home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .langs>.lng{
     text-align: center;
     width: 100%;
