--- a/CarsCrete/ClientApp/src/app/cars/cars.component.css
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.css
@@ -1,3 +1,61 @@
+@media (max-width: 768px){
+    .filters .col-sm-3{
+        border-right: none !important;
+        
+    }
+    .filters .col-sm-3:not(:last-child){
+        border-bottom: 1px solid gray;
+    
+    }
+    .filters .col-sm-3>i{
+       
+        right: 40px;
+    }
+}
+@media (min-width: 769px){
+    .filters .col-sm-3:hover{
+        /* background-color: rgba(24, 226, 24, 0.589); */
+        box-shadow: inset 0 0 10px black;
+    }
+}
+
+.filters .col-sm-3{
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:#5bc0de;
+    height: 48px;
+    
+
+}
+.checked{
+    background-color: rgba(24, 226, 24, 0.589) !important;
+    box-shadow: inset 0 0 10px black;
+}
+.filters .col-sm-3>span{
+
+}
+.filters .col-sm-3>i{
+    display: none;
+    color: gray;
+    position: absolute;
+    right: 30px;
+    font-weight: lighter;
+    font-size: 16pt;
+}
+.filters{
+    border: 1px solid rgba(0, 0, 0, 0.5);
+  
+    border-radius: 4px;
+}
+.filters .col-sm-3:not(:last-child){
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
+
+}
+
+
 .cars-container{
     display: flex;
     flex-wrap: wrap;
