--- a/CarsCrete/ClientApp/src/app/cars/cars.component.html
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.html
@@ -1,17 +1,16 @@
-<h1>Hello{{user?', '+user.Name+'!':''}}</h1>
-{{f}}
+<h1>{{"OUR_CARS" | translate}}</h1>
 <div class="container-fluid">
   <div class="filters row">
     
-    <div class="col-sm-3" [ngClass]="{checked:f.indexOf('Механика')>-1}" (click)="addFilter('Transmission','Механика')"><span>{{"MANUAL" | translate}}</span> <i class="fa fa-check"></i></div>
-    <div class="col-sm-3" [ngClass]="{checked:f.indexOf('Автомат')>-1}" (click)="addFilter('Transmission','Автомат')"><span>{{"AUTOMATIC" | translate}}</span><i class="fa fa-check"></i></div>
+    <div class="col-sm-3" [ngClass]="{checked:f.indexOf('Manual')>-1}" (click)="addFilter('Transmission','Manual')"><span>{{"MANUAL" | translate}}</span> <i class="fa fa-check"></i></div>
+    <div class="col-sm-3" [ngClass]="{checked:f.indexOf('Automatic')>-1}" (click)="addFilter('Transmission','Automatic')"><span>{{"AUTOMATIC" | translate}}</span><i class="fa fa-check"></i></div>
     <div class="col-sm-3" [ngClass]="{checked:f.indexOf('cabriolet')>-1}" (click)="addFilter('BodyType','cabriolet')"><span>{{"CABRIOLET" | translate}}</span><i class="fa fa-check"></i></div>
     <div class="col-sm-3" [ngClass]="{checked:f.indexOf('minivan')>-1}" (click)="addFilter('BodyType','minivan')"><span>{{"MINIVAN" | translate}}</span><i class="fa fa-check"></i></div>
     
   </div>
   <div class="cars-container">
     <div *ngFor='let car of filteredCars' class="car-item">
-      <div class="car-img">
+      <div (click)="showCarInfo(car)" class="car-img">
         <img src="{{car.Photo}}" alt="">
         <div class="blur"></div>
       </div>
@@ -40,12 +39,13 @@
           </div>
         </div>
         <div class="buttons">
-          <button class="btn btn-info" >{{"CAR_INFO" | translate}}</button>
-          <button class="btn btn-success" >{{"BOOK" | translate}}</button>
+          <button class="btn btn-info" (click)="showCarInfo(car)">{{"CAR_INFO" | translate}}</button>
+          <button class="btn btn-success" (click)="bookCar()">{{"BOOK" | translate}}</button>
         </div>
         
       </div>
     </div>
   </div>
 </div>
+<car-card *ngIf="service.showCarInfo" [service]="service"></car-card>
 <loader *ngIf="load"></loader>
